# EasyWin32

./: .gitignore  AHGraphics.cpp  AHGraphics.h  CMakeLists.txt  Changelog.md  EasyWin32.cpp  EasyWin32.h  EasyX_Win32Ctrl.sln  EasyX_Win32Ctrl.vcxproj  EasyX_Win32Ctrl.vcxproj.filters  README.md  Tutorial.md  buildall_vs2022.bat  main.cpp
examples/: avoid-while-yangw80.cpp  avoid-white-blocks.cpp  chess-marathon.cpp  helloworld.cpp  hiex_scroll_test.cpp
include/: HiCanvas.h  HiContainer.h  HiDef.h  HiEasyX.h  HiFPS.h  HiMacro.h  HiMiscUtils.h  HiWindow.h
include/HiEasyX/: HiCanvas.h  HiDef.h  HiDrawingProperty.h  HiFPS.h  HiGif.h  HiGraphicsUtils.h  HiMacro.h  HiMiscUtils.h  HiString.h  HiWindow.h
include/HiEasyX/HiSysGUI/: HiSysGUI.h  SysButton.h  SysCheckBox.h  SysComboBox.h  SysControlBase.h  SysEdit.h  SysGroup.h  SysGroupBox.h  SysRadioButton.h  SysStatic.h
include/HiSysGUI/: HiSysGUI.h  SysComboBox.h  SysEdit.h  SysGroupBox.h
lib/: AHGraphics.cpp  AHGraphics.h  EasyWin32.cpp  EasyWin32.h
samples/DrawingEfficiencyComparison/: main.cpp
samples/Sample1/: main.cpp
samples/Sample2/: main.cpp
samples/Sample3/: main.cpp
samples/Sample_Tray/: main.cpp
samples/Start/: main.cpp
samples/TextBox&Button/: main.cpp
src/: HiCanvas.cpp  HiContainer.cpp  HiDrawingProperty.cpp  HiFPS.cpp  HiGdiplus.cpp  HiGif.cpp  HiGraphicsUtils.cpp  HiIcon.cpp  HiMiscUtils.cpp  HiMouseDrag.cpp  HiMusicMCI.cpp  HiWindow.cpp
src/HiSysGUI/: SysButton.cpp  SysCheckBox.cpp  SysComboBox.cpp  SysControlBase.cpp  SysEdit.cpp  SysGroup.cpp  SysGroupBox.cpp  SysRadioButton.cpp  SysStatic.cpp
